# tesstractor

./: .travis.yml  CHANGELOG.txt  MANIFEST.in  README.md  README.txt  config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sqm_reader.service  tox.ini
.github/workflows/: publish-pypi.yml
extras/: 81-sqm.rules  config.ini  sqm_reader.service  tesstractor.service
pysqm/: __init__.py  __main__.py  common.py  dum.py  main.py  observatory.py  plot.py  read.py  save.py  settings.py  test.py
pysqml/: IDA-TESS-template.tpl  IDA-template.tpl  cli.py  device.py  mqtt.py  sqm.py  tess.py  workers.py  writef.py
pysqml/tests/: test_sqm.py
sandbox/: t_q.py  th.py
src/tesstractor/: __init__.py  base.ini  cli.py  device.py  mqtt.py  plot.py  reader.py  sqm.py  tess.py  workers.py  writef.py
src/tesstractor/tests/: test_cli.py  test_sqm.py
tesstractor/: IDA-SQM-template.tpl  __init__.py  base.ini  cli.py  device.py  mqtt.py  plot.py  reader.py  sqm.py  tess.py  workers.py  writef.py
