[build-system]
requires = ["setuptools >= 43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesstractor"
dynamic = ["version"]
description = "TESS photometer reading software"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "Sergio Pascual", email = "sergiopr@fis.ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pytz",
    "tzlocal",
    "pyserial",
    "paho-mqtt",
    "attrs>=17.4.0",
    "matplotlib",
    "numpy",
    "astroplan",
    "astropy",
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx"]


[project.urls]
Homepage = "https://github.com/guaix-ucm/tesstractor"
Repository = "https://github.com/guaix-ucm/tesstractor.git"

[project.scripts]
tesstractor = "tesstractor.cli:main"
tesstractor-plot = "tesstractor.plot:main"