[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tesstractor"
dynamic = ["version"]
description = "TESS photometer reading software"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "Sergio Pascual", email = "sergiopr@fis.ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astroplan",
    "astropy",
    "attrs>=17.4.0",
    "matplotlib",
    "numpy",
    "paho-mqtt",
    "pyserial",
    "pytz",
    "tzlocal",
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx"]


[project.urls]
Homepage = "https://github.com/guaix-ucm/tesstractor"
Repository = "https://github.com/guaix-ucm/tesstractor.git"

[project.scripts]
tesstractor = "tesstractor.cli:main"
tesstractor-plot = "tesstractor.plot:main"

# without this, still works, performs autodetection
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
