[metadata]
name = tesstractor
version = attr:tesstractor.__version__
author = Sergio Pascual
author_email = sergiopr@fis.ucm.es
url = https://github.com/guaix-ucm/tesstractor
license = GPLv3
license_files =
    LICENSE.txt
description = TESS photometer reading software
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
package_dir =
    = src
install_requires =
    pytz
    tzlocal
    pyserial
    paho-mqtt
    attrs>=17.4.0
    matplotlib
    numpy
    astroplan
    astropy

[options.packages.find]
where = src

[options.package_data]
tesstractor =
    base.ini
    IDA-*-template.tpl

[options.extras_require]
test =
    pytest
docs =
    sphinx

[options.entry_points]
console_scripts =
    tesstractor = tesstractor.cli:main
    tesstractor-plot = tesstractor.plot:main

[bdist_wheel]
universal = 1
